--- a/3/index.html
+++ b/3/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div id="main">
+      <div class="box">box</div>
       <section>
         <h1>見出し</h1>
         <p>段落</p>
