--- a/3/index.html
+++ b/3/index.html
@@ -10,6 +10,9 @@
   <body>
     <div id="main">
       <div class="box">box</div>
+      <div class="item">
+        <div class="image"><div class="text"></div></div>
+      </div>
       <section>
         <h1>見出し</h1>
         <p>段落</p>
