p144まで終わり

--- a/3/index.html
+++ b/3/index.html
@@ -8,8 +8,9 @@
     <title>Document</title>
   </head>
   <body>
-    <div id="main">
-      <div class="box">box</div>
+    <div class="main">
+      <div class="box1">box</div>
+      <div class="box2">box</div>
       <div class="item">
         <div class="image"><div class="text"></div></div>
       </div>
